--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -63,7 +63,7 @@
     transition: 0.3s;
 }
 
-/* links */
+
 
 .nav-links {
     display: flex;
@@ -72,6 +72,11 @@
     font-size: clamp(0.85rem, 2vw, 0.9rem);
     align-items: center;
     flex-wrap: nowrap;
+}
+
+
+.nav-links .close-menu {
+  display: none;
 }
 
 .nav-links a {
@@ -112,7 +117,7 @@
 }
 
 
-/* Header for company pag */
+
 .white-header .logo,
 .white-header a,
 .white-header .get-in-touch {
@@ -127,15 +132,12 @@
 .nav-links .active-link::after {
   content: "";
   position: absolute;
-  bottom: -4px; 
+  bottom: -6px; 
   left: 0;
   width: 100%;
   height: 3px;
-  background: linear-gradient(90deg, var(--heat), var(--green));
+  background: var(--heat); 
   border-radius: 2px;
-}
-.nav-links .close-menu{
-  display: none;
 }
 
 
@@ -157,7 +159,7 @@
   }
 }
 
-/* Tablet Portrait and Mobile */
+
 @media (max-width: 900px) {
   .nav-links {
     gap: 0.75rem;
